@@ -52,6 +52,8 @@ o dotls transparent SSL/TLS wrapper for tcpserver
 24. PKGBUILD: fix permissions of installed files in destdir
 25. PKGBUILD: replaced DESTDIR with pkgdir
 26. installer.c: set default permissions when mode=-1
+- 05/08/2021
+27. installer.c: added -p option to create directories as needed
 
 * Sunday 14 February 2021 07:46:33 PM IST
 Release 1.0 Start 21/05/2020
