@@ -127,6 +127,8 @@ o svscan: set SERVICEDIR, PWD environment variable
 49. installer.c: added -m option to ignore missing files
 50. daemontools.spec.in: added permission files for indimail-mta
 51. replaced instcheck, hier.c with installer
+- 05/08/2021
+52. installer.c: added -p option to create directories as needed
 
 * Sunday 14 February 2021 07:46:33 PM IST
 Release 1.0 Start 09/10/2020
